DuPont DevSB/src/objects/Burn_Report__c.object
<CustomObject>
    <description>Project - hours tracking by resource</description>
    <fields>
        <fullName>Actual_Hours_to_date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Hours to date</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_dollars_to_date__c</fullName>
        <formula>Actual_Hours_to_date__c * Rate_hr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual $ to date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Budget__c</fullName>
        <formula>Budget_Hrs__c * Rate_hr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Budget $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Hrs__c</fullName>
        <label>Budget Hrs</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_w_Budget_Dollars__c</fullName>
        <formula>Diff_w_Budget__c * Rate_hr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff w/ Budget $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Diff_w_Budget__c</fullName>
        <formula>Budget_Hrs__c - Forecast_Final_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff w/ Budget</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Hrs_to_Complete__c</fullName>
        <formula>Forecast_Final_Hours__c - Actual_Hours_to_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Hrs to Complete</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Final_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecast Final Hours</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perdent_Complete__c</fullName>
        <formula>Actual_Hours_to_date__c / Budget_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <label>Project Overview</label>
        <referenceTo>Project_Overview__c</referenceTo>
        <relationshipLabel>Burn Report Items</relationshipLabel>
        <relationshipName>R00N80000002bA0CEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_hr__c</fullName>
        <label>Rate/hr</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sr Advisor</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Engagement Manager</fullName>
                </value>
                <value>
                    <fullName>Engagement Mgr - Tech</fullName>
                </value>
                <value>
                    <fullName>Senior Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Developer - Custom Code</fullName>
                </value>
                <value>
                    <fullName>QA Architect</fullName>
                </value>
                <value>
                    <fullName>Quality Engineer</fullName>
                </value>
                <value>
                    <fullName>Data Architect</fullName>
                </value>
                <value>
                    <fullName>Data Migration Specialist</fullName>
                </value>
                <value>
                    <fullName>Education Architect</fullName>
                </value>
                <value>
                    <fullName>Instructor (onsite)</fullName>
                </value>
                <value>
                    <fullName>Curriculum Developer</fullName>
                </value>
                <value>
                    <fullName>Developer - Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Burn Report</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Burn Report Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burn Report Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>